# bevy_rpg

./: .gitignore  Cargo.toml  asd.md
assets/: floor.tsx  map_1.tmx  untitled.tiled-session  walls.tsx
src/: main.rs
src/components/: animation.rs  mod.rs  utils.rs
src/plugins/: mod.rs  movement_plugin.rs
src/systems/: animation.rs  input_handling.rs  mod.rs
