[package]
name = "bevy_rpg"
version = "0.1.0"
edition = "2024"


[dependencies]
avian2d = "0.6.1"
bevy = { version = "0.18.1", default-features = false, features = ["2d"]  }
bevy_ecs_tiled = { version = "0.12.0", features = ["avian"]}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
